# freedive

./: README.md
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
freefall-frontend/: .d.ts  .firebaserc  cloudbuild.yaml  package-lock.json  package.json  tsconfig.json
freefall-frontend/.firebase/: hosting.YnVpbGQ.cache  hosting.cHVibGlj.cache
freefall-frontend/public/: index.html
freefall-frontend/src/: App.tsx  config.ts  index.tsx  react-app-env.d.ts
freefall-frontend/src/constants/: routes.ts
freefall-frontend/src/models/: diver-case.ts  slutions.ts  solution.ts  solutions.ts
freefall-frontend/test/: response.json
freefall-solver/: .gitignore  Pipfile  classes.py  cloudbuild.yaml  equations.py  json_encoder.py  json_parsing.py  main.py  pyproject.toml  requirements.txt  solver.py  temp.json
freefall-solver/src/: classes.py  config.py  diver_case.py  equations.py  json_encoder.py  json_parsing.py  main.py  requirements.txt  solution.py  solver.py
freefall-solver/tests/: fixtures.py  request_data.json  test_equations.py  test_main.py  test_solver.py
freefall-solver/tests/component/: response_data.json  test_freefall_solver.py
freefall-solver/tests/surface/: test_function.py
freefall-solver/tests/unit/: fixtures.py  test_equations.py  test_json_encoder.py  test_json_parsing.py  test_main.py  test_solver.py
instructor-thesis/: .gitignore  freefall.ipynb  pyproject.toml
instructor-thesis/.ipynb_checkpoints/: Untitled2-checkpoint.ipynb  freefall-checkpoint.ipynb  minimal example-checkpoint.ipynb
(+31 files in other folders)
