[tool.poetry]
name = "freefall-solver"
version = "0.1.0"
description = ""
authors = ["Marc Pfander"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.3"
functions-framework = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
